feat: 구분자 관련 예외처리